# cmake_study

./: CMakeLists.txt  Readme  main.c
lib/: libcjson.so.1
src/: CMakeLists.txt  hello.c  hello.h  hello_world.c  hello_world.h  main.c
src/hello/: CMakeLists.txt
src/world/: CMakeLists.txt  world.c  world.h
